# api/handler/category.go
@@ -1,7 +1,7 @@
 package handler
 
 import (
-	"app/models"
+	"app/api/models"
 	"app/pkg/helper"
 	"net/http"
 
@@ -29,19 +29,19 @@ func (h *handler) CreateCategory(c *gin.Context) {
 		return
 	}
 
-	id, err := h.strg.Category().Create(&createCategory)
+	id, err := h.strg.Category().Create(c.Request.Context(), &createCategory)
 	if err != nil {
 		h.handlerResponse(c, "storage.category.create", http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	resp, err := h.strg.Category().GetByID(&models.CategoryPrimaryKey{Id: id})
+	resp, err := h.strg.Category().GetByID(c.Request.Context(), &models.CategoryPrimaryKey{Id: id})
 	if err != nil {
 		h.handlerResponse(c, "storage.category.getById", http.StatusInternalServerError, err.Error())
 		return
 	}
 
-	h.handlerResponse(c, "create category resposne", http.StatusOK, resp)
+	h.handlerResponse(c, "create category resposne", http.StatusCreated, resp)
 }
 
 // GetByID category godoc
@@ -64,7 +64,7 @@ func (h *handler) GetByIdCategory(c *gin.Context) {
 		return
 	}
 
-	resp, err := h.strg.Category().GetByID(&models.CategoryPrimaryKey{Id: id})
+	resp, err := h.strg.Category().GetByID(c.Request.Context(), &models.CategoryPrimaryKey{Id: id})
 	if err != nil {
 		h.handlerResponse(c, "storage.category.getById", http.StatusInternalServerError, err.Error())
 		return
@@ -100,7 +100,7 @@ func (h *handler) GetListCategory(c *gin.Context) {
 		return
 	}
 
-	resp, err := h.strg.Category().GetList(&models.CategoryGetListRequest{
+	resp, err := h.strg.Category().GetList(c.Request.Context(), &models.CategoryGetListRequest{
 		Offset: offset,
 		Limit:  limit,
 		Search: c.Query("search"),
@@ -111,4 +111,86 @@ func (h *handler) GetListCategory(c *gin.Context) {
 	}
 
 	h.handlerResponse(c, "get list category resposne", http.StatusOK, resp)
+}
+
+// Update category godoc
+// @ID update_category
+// @Router /category/{id} [PUT]
+// @Summary Update Category
+// @Description Update Category
+// @Tags Category
+// @Accept json
+// @Procedure json
+// @Param id path string true "id"
+// @Param category body models.UpdateCategory true "UpdateCategoryRequest"
+// @Success 200 {object} Response{data=string} "Success Request"
+// @Response 400 {object} Response{data=string} "Bad Request"
+// @Failure 500 {object} Response{data=string} "Server error"
+func (h *handler) UpdateCategory(c *gin.Context) {
+
+	var (
+		id             string = c.Param("id")
+		updateCategory models.UpdateCategory
+	)
+
+	if !helper.IsValidUUID(id) {
+		h.handlerResponse(c, "is valid uuid", http.StatusBadRequest, "invalid id")
+		return
+	}
+
+	err := c.ShouldBindJSON(&updateCategory)
+	if err != nil {
+		h.handlerResponse(c, "error category should bind json", http.StatusBadRequest, err.Error())
+		return
+	}
+
+	updateCategory.Id = id
+	rowsAffected, err := h.strg.Category().Update(c.Request.Context(), &updateCategory)
+	if err != nil {
+		h.handlerResponse(c, "storage.category.update", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	if rowsAffected <= 0 {
+		h.handlerResponse(c, "storage.category.update", http.StatusBadRequest, "now rows affected")
+		return
+	}
+
+	resp, err := h.strg.Category().GetByID(c.Request.Context(), &models.CategoryPrimaryKey{Id: updateCategory.Id})
+	if err != nil {
+		h.handlerResponse(c, "storage.category.getById", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	h.handlerResponse(c, "create category resposne", http.StatusAccepted, resp)
+}
+
+// Delete category godoc
+// @ID delete_category
+// @Router /category/{id} [DELETE]
+// @Summary Delete Category
+// @Description Delete Category
+// @Tags Category
+// @Accept json
+// @Procedure json
+// @Param id path string true "id"
+// @Success 200 {object} Response{data=string} "Success Request"
+// @Response 400 {object} Response{data=string} "Bad Request"
+// @Failure 500 {object} Response{data=string} "Server error"
+func (h *handler) DeleteCategory(c *gin.Context) {
+
+	var id string = c.Param("id")
+
+	if !helper.IsValidUUID(id) {
+		h.handlerResponse(c, "is valid uuid", http.StatusBadRequest, "invalid id")
+		return
+	}
+
+	err := h.strg.Category().Delete(c.Request.Context(), &models.CategoryPrimaryKey{Id: id})
+	if err != nil {
+		h.handlerResponse(c, "storage.category.delete", http.StatusInternalServerError, err.Error())
+		return
+	}
+
+	h.handlerResponse(c, "create category resposne", http.StatusNoContent, nil)
 }
