# api/models/category.go
@@ -1,0 +1,39 @@
+package models
+
+type ProductPrimaryKey struct {
+	Id string `json:"id"`
+}
+
+type CreateProduct struct {
+	Name       string  `json:"name"`
+	Price      float64 `json:"price"`
+	CategoryId string  `json:"category_id"`
+}
+
+type Product struct {
+	Id           string    `json:"id"`
+	Name         string    `json:"name"`
+	Price        float64   `json:"price"`
+	CategoryId   string    `json:"category_id"`
+	CategoryData *Category `json:"category_data"`
+	CreatedAt    string    `json:"created_at"`
+	UpdatedAt    string    `json:"updated_at"`
+}
+
+type UpdateProduct struct {
+	Id         string  `json:"id"`
+	Name       string  `json:"name"`
+	Price      float64 `json:"price"`
+	CategoryId string  `json:"category_id"`
+}
+
+type ProductGetListRequest struct {
+	Offset int    `json:"offset"`
+	Limit  int    `json:"limit"`
+	Search string `json:"search"`
+}
+
+type ProductGetListResponse struct {
+	Count    int        `json:"count"`
+	Products []*Product `json:"products"`
+}
